Fixed findings page spacing with graphics.

--- a/src/styles/Elements.scss
+++ b/src/styles/Elements.scss
@@ -5,7 +5,7 @@
     border-style: hidden; /* hide standard table (collapsed) border */
     margin: 3em 0;
     box-shadow: 0 0 0 1px #ccc, 0 8px 16px 0 rgba(128,128,128,0.5); /* this draws the table border and shadow */ 
-
+    
     thead tr {
         color: $table;
         border-bottom: 0.5em solid $table;
@@ -14,6 +14,8 @@
     td, th {
         font-weight: 300;
         border: 1px solid #ccc;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     td {
