--- a/src/styles/Pages.scss
+++ b/src/styles/Pages.scss
@@ -9,18 +9,20 @@
     &.findings-page {
         .pie-chart-container {
             margin: 3em 0;
+            text-align: center;
         }
 
-        .chart-container {
+        .reliability-chart-container {
             margin: 4em 0em;
         }
+
         .chart-title {
             text-align: center;
         }
+
         .table {
             font-size: 0.9em;
             margin: 1em;
-            width: 25%;
         }
 
     }
